# voiceover_tool

./: .gitignore  README.md  advanced_audio.py  audio_postprocess.py  build.py  cli.py  embedding_loader.py  extract_embedding.py  gui_main.py  http_server.py  install.sh  main.py  mp3_encoder.py  multilingual.py  onnx_session.py  project.json  pyproject.toml  quality_metrics.py  requirements.txt  subtitle.py  tests.py  text_normalizer.py  tokenizer.py  voice.py
docs/: index.html
examples/: sample_synth.py
models/: manifest.json  tokenizer_en.json  tts.onnx  tts_es.onnx  tts_fr.onnx
tools/: extract_embedding.cpp
voices/: narrator.json
